--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
 </head>
 
 <body>
-    <h1> Mi primer titulo editado con CSS</h1>
-    <h2 id="element-for-modify" subtit="sii">Mi primer H2 con CSS</h2>
-    <h2><p> primer H2 con CSS </p> </h2>
-    <h2 class="h2-class"> <b> primer H2 con CSS </b> </h2>
-        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus laboriosam, officiis dolores saepe rerum
-            impedit atque cumque quisquam tenetur libero ipsa possimus sunt nihil necessitatibus aliquid quasi!
-            Mollitia, quia deleniti.</p>
-</body>
+
+    <h1 class="color-red" id="color-blue" style="color: green;"> Mi primer titulo editado con CSS</h1>
+
 
 </html>
