--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
     <title> CSS </title>
 </head>
@@ -12,7 +13,7 @@
     
     <div class="contact-form">
             <h2 class="contact-form__p-h2"> Titulo </h2>
-        
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ad qui exercitationem ducimus quasi magnam ipsam, sint, similique vitae cum accusamus, ipsum at natus. Quod alias vel atque nihil ratione?</p>
     </div>
 
 </body>
