--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <title> CSS </title>
 </head>
 <body>
-    
-    <div class="contact-form">
-            <h2 class="contact-form__p-h2"> Titulo </h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ad qui exercitationem ducimus quasi magnam ipsam, sint, similique vitae cum accusamus, ipsum at natus. Quod alias vel atque nihil ratione?</p>
-    </div>
+   <h2>Rancio</h2>
+   
 
 </body>
 </html>
