--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <title> CSS </title>
 </head>
 <body>
-   <h2>Rancio</h2>
-   <h2>Rancio God</h2>
-   
+
+<div class="caja1"></div><div class="caja2"></div><div class="caja3"></div><div class="caja4"></div>
 
 </body>
 </html>
