Todas las Positions y Z-index gooooooooooooood

--- a/index.html
+++ b/index.html
@@ -11,7 +11,37 @@
 </head>
 <body>
 
-<div class="caja1"></div><div class="caja2"></div><div class="caja3"></div><div class="caja4"></div>
+<div class="texto">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt harum laudantium officia cupiditate nesciunt sapiente dolore, magni aut. Est ab similique officiis consequatur tempora fugit molestias, qui quidem quo quos.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis beatae laborum unde exercitationem aliquam quo, deserunt veniam, voluptates aliquid, magnam illo. Exercitationem quod laudantium cupiditate soluta alias illum quidem nobis.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ipsum laboriosam enim tenetur. Error excepturi distinctio accusantium ad quasi minima sapiente laboriosam libero voluptatum. Perferendis dolores voluptatem magni impedit reprehenderit.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestias obcaecati, vel consequuntur aperiam libero dolore repellendus in cupiditate, aspernatur repudiandae possimus corporis voluptas, minus suscipit veritatis debitis ipsa vero?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores animi obcaecati rerum at error. Vero odit totam, cupiditate aliquam amet praesentium repudiandae aperiam enim repellendus sit consequuntur impedit, cum odio?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit obcaecati sequi voluptatum repudiandae quibusdam aliquam corrupti debitis. Fuga provident cum alias cupiditate animi delectus quis harum perspiciatis, reiciendis perferendis quo!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, porro eos? Exercitationem repudiandae fugiat dolore, amet harum provident illo velit quas rem laborum obcaecati placeat quaerat? Facere labore nobis quibusdam.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla laboriosam itaque perferendis tempora. Odio ratione tenetur laborum. At eos eveniet, quaerat aspernatur unde error odio velit atque! Ea, iste omnis.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas ipsum, eligendi consequuntur culpa praesentium possimus quo! Provident voluptas nihil asperiores quia labore nostrum unde nisi sunt atque, autem eligendi et.
+    blanditiis? Dolorem quia quae, soluta ad ullam consectetur rem voluptas minima error placeat id neque dolorum qui cumque suscipit natus!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque excepturi soluta temporibus dolorum repudiandae porro vero debitis cumque impedit minus possimus magni ad eligendi nulla numquam, error nam. Nisi, autem!
+</div>
+<div class="caja-fixed">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, dolores 
+</div>
+<div class="texto">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt harum laudantium officia cupiditate nesciunt sapiente dolore, magni aut. Est ab similique officiis consequatur tempora fugit molestias, qui quidem quo quos.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis beatae laborum unde exercitationem aliquam quo, deserunt veniam, voluptates aliquid, magnam illo. Exercitationem quod laudantium cupiditate soluta alias illum quidem nobis.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ipsum laboriosam enim tenetur. Error excepturi distinctio accusantium ad quasi minima sapiente laboriosam libero voluptatum. Perferendis dolores voluptatem magni impedit reprehenderit.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates molestias obcaecati, vel consequuntur aperiam libero dolore repellendus in cupiditate, aspernatur repudiandae possimus corporis voluptas, minus suscipit veritatis debitis ipsa vero?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores animi obcaecati rerum at error. Vero odit totam, cupiditate aliquam amet praesentium repudiandae aperiam enim repellendus sit consequuntur impedit, cum odio?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit obcaecati sequi voluptatum repudiandae quibusdam aliquam corrupti debitis. Fuga provident cum alias cupiditate animi delectus quis harum perspiciatis, reiciendis perferendis quo!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, porro eos? Exercitationem repudiandae fugiat dolore, amet harum provident illo velit quas rem laborum obcaecati placeat quaerat? Facere labore nobis quibusdam.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla laboriosam itaque perferendis tempora. Odio ratione tenetur laborum. At eos eveniet, quaerat aspernatur unde error odio velit atque! Ea, iste omnis.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas ipsum, eligendi consequuntur culpa praesentium possimus quo! Provident voluptas nihil asperiores quia labore nostrum unde nisi sunt atque, autem eligendi et.
+    blanditiis? Dolorem quia quae, soluta ad ullam consectetur rem voluptas minima error placeat id neque dolorum qui cumque suscipit natus!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque excepturi soluta temporibus dolorum repudiandae porro vero debitis cumque impedit minus possimus magni ad eligendi nulla numquam, error nam. Nisi, autem!
+</div>
 
+<script type="text/javascript">
+    alert('ventana emergente')
+
+</script>
 </body>
 </html>
