--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYbE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,9 +10,8 @@
     <title> CSS </title>
 </head>
 <body>
-
-<b>Holaaaaaa</b>
-<b>Holaaaaaa</b>
-<b>Holaaaaaa</b>
+    <form action="">
+        <input type="text" placeholder="Inserte su nombre aquí">
+    </form>
 </body>
 </html>
