--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <div class="caja">
+        <h1> Este es el titulo de la plataforma </h1>
+        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolorum error dolores sequi aut quae neque itaque quia iste, nam exercitationem facilis, dignissimos, soluta tempore quasi hic officia assumenda magnam!</p>
+    </div>
+    <div class="caja2">
+        <h2>Este es el titulo de la noticia</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis blanditiis maxime, tempore ab harum, dolore ex recusandae, doloremque ipsum reprehenderit incidunt? Cupiditate eius aliquid quis quae inventore atque possimus similique.</p>
     </div>
     
 </body>
